--- a/contador-palavras/index.html
+++ b/contador-palavras/index.html
@@ -13,7 +13,7 @@
         <textarea
           id="input-textarea"
           rows="12"
-          placeholder="Comece a digitar aqui..."
+          placeholder="Comece a digitar aqui para testar"
         ></textarea>
       </div>
       <div class="count">
